# llm-reviewer

./: .dockerignore  .env.local  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
llm_reviewer/: app.py  documents.py  embeddings.py  git.py  llm.py  vector_store.py
llm_reviewer/docs/: good-code.md
llm_reviewer/files/: code_review.json  code_review.md  good-code.md  pull-request.txt
llm_reviewer/prompts/: context.md  response.md
llm_reviewer/streamlit/: app.py  cache.py
scripts/: run-ollama.sh
